--- a/configuracao.html
+++ b/configuracao.html
@@ -15,7 +15,8 @@
         <nav class="sidebar-links">
             <a href="controle.html">🏠 Ir para Controle</a>
             <a href="visao.html">👁️ Ir para Visão</a>
-            <a href="inicio.html">Início</a>
+            <a href="index.html">Início</a>
+            <a href="relatorio.html">📊 Relatórios</a>
         </nav>
     </div>
     <div id="overlay" class="overlay" onclick="toggleSidebar()"></div>
