--- a/sala3.html
+++ b/sala3.html
@@ -22,8 +22,8 @@
         <nav class="sidebar-links">
             <a href="controle.html">🏠 Ir para Controle</a>
             <a href="visao.html">👁️ Ir para Visão</a>
-            <a href="inicio.html">Início</a>
-            <a href="relatorio.html">📊 Relatórios</a> <a href="inicio.html">Início</a>
+            <a href="index.html">Início</a>
+            <a href="relatorio.html">📊 Relatórios</a>
         </nav>
     </div>
 
