--- a/sala2.html
+++ b/sala2.html
@@ -22,8 +22,8 @@
         <nav class="sidebar-links">
             <a href="controle.html">🏠 Ir para Controle</a>
             <a href="visao.html">👁️ Ir para Visão</a>
-           <a href="index.html">Início</a>
-            <a href="relatorio.html">📊 Relatórios</a> <a href="index.html">Início</a>
+            <a href="index.html">Início</a>
+            <a href="relatorio.html">📊 Relatórios</a>
         </nav>
     </div>
 
@@ -52,6 +52,7 @@
                 <button id="btn-limpeza" class="btn-status" onclick="definirStatus('limpeza')">Limpeza iniciada</button>
                 <div class="spacer"></div>
                 <button id="btn-disponivel" class="btn-status central" onclick="definirStatus('disponivel')">Sala pronta para cirurgia</button>
+                 <button id="btn-encerrar" class="btn-status" style="background-color: #666 !important; color: white;" onclick="encerrarAtividades()">Encerrar Atividades (Pausar)</button>
             </div>
 
             <footer class="footer-status">
