--- a/sala7.html
+++ b/sala7.html
@@ -52,6 +52,7 @@
                 <button id="btn-limpeza" class="btn-status" onclick="definirStatus('limpeza')">Limpeza iniciada</button>
                 <div class="spacer"></div>
                 <button id="btn-disponivel" class="btn-status central" onclick="definirStatus('disponivel')">Sala pronta para cirurgia</button>
+                 <button id="btn-encerrar" class="btn-status" style="background-color: #666 !important; color: white;" onclick="encerrarAtividades()">Encerrar Atividades (Pausar)</button>
             </div>
 
             <footer class="footer-status">
