--- a/controle.html
+++ b/controle.html
@@ -12,9 +12,9 @@
          
         <h1 class="titulo-pagina">Controle</h1>
     </header>
-    <div class="logo-container">
-            <img src="logo.png" alt="Logo HGF" class="logo-img">
-        </div>
+   <a href="controle.html" class="botao-imagem">
+    <img src="logo.png" alt="Botão Controle">
+</a>
 
     <main>
         <div class="panel-grid">
